Решение ФЗ 12 спринта:  - Добавлена База данных (БД), на основе H2  - Добавлены классы хранилищ для работы с БД  - Методы переработаны и перенесены, для работы как с БД, так и из памяти  - Теперь контроллер работает с сервисом, а сервис уже с хранилищами  - В film добавлен рейтинг и жанры

--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -1,5 +1,15 @@
-spring.main:
+spring:
+  main:
     log-startup-info: false
     banner-mode: off
+
+  sql:
+    init.mode: always
+
+  datasource:
+    url: jdbc:h2:file:./db/filmorate
+    driverClassName: org.h2.Driver
+    username: sa
+    password: password
 
 logging.level.org.zalando.logbook: TRACE
